harbor/goharbor/02-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor
  namespace: system-harbor
  annotations:
    kubernetes.io/ingress.class: "system-ingress"
spec:
  rules:
    - host: "harbor.k.erusnikov.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: system-harbor-harbor-portal
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: system-harbor-harbor-core
                port:
                  number: 80
          - path: /service/
            pathType: Prefix
            backend:
              service:
                name: system-harbor-harbor-core
                port:
                  number: 80
          - path: /v2/
            pathType: Prefix
            backend:
              service:
                name: system-harbor-harbor-core
                port:
                  number: 80
          - path: /chartrepo/
            pathType: Prefix
            backend:
              service:
                name: system-harbor-harbor-core
                port:
                  number: 80
          - path: /c/
            pathType: Prefix
            backend:
              service:
                name: system-harbor-harbor-core
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-notary
  namespace: system-harbor
  annotations:
    kubernetes.io/ingress.class: "system-ingress"
spec:
  rules:
    - host: "notary.k.erusnikov.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: system-harbor-harbor-notary-server
                port:
                  number: 4443
